src/test/test-models/bad/get_lp_bad_scope2.stan
functions {
  real foo(real x) {
    return x + get_lp();
  }
}
parameters {
  real z;
}
model {
  z ~ normal(0,1);
  print(foo(z));
}
